[#16310] UserSubscriptionListPageApiImpl - error fix